# src/gs-api/src/models.ts
@@ -9,6 +9,7 @@ export { CategoryCriteria } from './models/category-criteria';
 export { CategoryDto } from './models/category-dto';
 export { ClientCriteria } from './models/client-criteria';
 export { ClientDto } from './models/client-dto';
+export { CommandeClientCriteria } from './models/commande-client-criteria';
 export { CommandeClientDto } from './models/commande-client-dto';
 export { CommandeClientUpdate } from './models/commande-client-update';
 export { CommandeFournisseurDto } from './models/commande-fournisseur-dto';
@@ -19,6 +20,7 @@ export { LigneCommandeClientDto } from './models/ligne-commande-client-dto';
 export { LigneCommandeFournisseurDto } from './models/ligne-commande-fournisseur-dto';
 export { LigneVenteDto } from './models/ligne-vente-dto';
 export { MvtStockDto } from './models/mvt-stock-dto';
+export { ReportingPrinter } from './models/reporting-printer';
 export { RolesDto } from './models/roles-dto';
 export { UtilisateurCriteria } from './models/utilisateur-criteria';
 export { UtilisateurDto } from './models/utilisateur-dto';
