# src/gs-api/src/models/commande-client-criteria.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+export interface CommandeClientCriteria {
+  actif?: boolean;
+  code?: string;
+  nomClient?: string;
+  nombreDeResultat?: string;
+  phoneClient?: string;
+}
