# src/gs-api/src/services/commandesclients-api.service.ts
@@ -9,6 +9,7 @@ import { map as __map, filter as __filter } from 'rxjs/operators';
 
 import { CommandeClientDto } from '../models/commande-client-dto';
 import { CommandeClientUpdate } from '../models/commande-client-update';
+import { CommandeClientCriteria } from '../models/commande-client-criteria';
 @Injectable({
   providedIn: 'root',
 })
@@ -16,8 +17,9 @@ class CommandesclientsApiService extends __BaseService {
   static readonly findAllPath = '/gestiondestock_backend/v1/commandesclients/all';
   static readonly savePath = '/gestiondestock_backend/v1/commandesclients/create';
   static readonly deletePath = '/gestiondestock_backend/v1/commandesclients/delete/{idCommandeClient}';
-  static readonly findByCodePath = '/gestiondestock_backend/v1/commandesclients/{codeCommandeClient}';
-  static readonly findByIdPath = '/gestiondestock_backend/v1/commandesclients/{idCommandeClient}';
+  static readonly findByCodePath = '/gestiondestock_backend/v1/commandesclients/findbycode/{codeCommandeClient}';
+  static readonly findByIdPath = '/gestiondestock_backend/v1/commandesclients/findbyid/{id}';
+  static readonly listingCommmandeClientPath = '/gestiondestock_backend/v1/commandesclients/listingCommandeClient';
 
   constructor(
     config: __Configuration,
@@ -142,7 +144,7 @@ class CommandesclientsApiService extends __BaseService {
 
     let req = new HttpRequest<any>(
       'GET',
-      this.rootUrl + `/gestiondestock_backend/v1/commandesclients/${encodeURIComponent(String(codeCommandeClient))}`,
+      this.rootUrl + `/gestiondestock_backend/v1/commandesclients/findbycode/${encodeURIComponent(String(codeCommandeClient))}`,
       __body,
       {
         headers: __headers,
@@ -168,17 +170,17 @@ class CommandesclientsApiService extends __BaseService {
   }
 
   /**
-   * @param idCommandeClient undefined
+   * @param id undefined
    * @return successful operation
    */
-  findByIdResponse(idCommandeClient: number): __Observable<__StrictHttpResponse<CommandeClientDto>> {
+  findByIdResponse(id: number): __Observable<__StrictHttpResponse<CommandeClientDto>> {
     let __params = this.newParams();
     let __headers = new HttpHeaders();
     let __body: any = null;
 
     let req = new HttpRequest<any>(
       'GET',
-      this.rootUrl + `/gestiondestock_backend/v1/commandesclients/${encodeURIComponent(String(idCommandeClient))}`,
+      this.rootUrl + `/gestiondestock_backend/v1/commandesclients/findbyid/${encodeURIComponent(String(id))}`,
       __body,
       {
         headers: __headers,
@@ -194,12 +196,54 @@ class CommandesclientsApiService extends __BaseService {
     );
   }
   /**
-   * @param idCommandeClient undefined
+   * @param id undefined
    * @return successful operation
    */
-  findById(idCommandeClient: number): __Observable<CommandeClientDto> {
-    return this.findByIdResponse(idCommandeClient).pipe(
+  findById(id: number): __Observable<CommandeClientDto> {
+    return this.findByIdResponse(id).pipe(
       __map(_r => _r.body as CommandeClientDto)
+    );
+  }
+
+  /**
+   * Renvoi la liste des commande des clients en fonction des critères de recherche
+   *
+   * Cette methode permet de chercher et de renvoyer la liste des commande des clients qui existentdans la BD
+   * @param body undefined
+   * @return La liste des commandeClient/ une liste vide
+   */
+  listingCommmandeClientResponse(body?: CommandeClientCriteria): __Observable<__StrictHttpResponse<Array<CommandeClientDto>>> {
+    let __params = this.newParams();
+    let __headers = new HttpHeaders();
+    let __body: any = null;
+    __body = body;
+    let req = new HttpRequest<any>(
+      'POST',
+      this.rootUrl + `/gestiondestock_backend/v1/commandesclients/listingCommandeClient`,
+      __body,
+      {
+        headers: __headers,
+        params: __params,
+        responseType: 'json'
+      });
+
+    return this.http.request<any>(req).pipe(
+      __filter(_r => _r instanceof HttpResponse),
+      __map((_r) => {
+        return _r as __StrictHttpResponse<Array<CommandeClientDto>>;
+      })
+    );
+  }
+  /**
+   * Renvoi la liste des commande des clients en fonction des critères de recherche
+   *
+   * Cette methode permet de chercher et de renvoyer la liste des commande des clients qui existentdans la BD
+   * @param body undefined
+   * @return La liste des commandeClient/ une liste vide
+   */
+  listingCommmandeClient(body?: CommandeClientCriteria): __Observable<Array<CommandeClientDto>> {
+    return this.listingCommmandeClientResponse(body).pipe(
+      __map(_r => _r.body as Array<CommandeClientDto>)
     );
   }
 }
